# dfa-sim

./: 1.6b.dfa  1.6b.in  1.6c.dfa  1.6c.in  1.6f.dfa  1.6f.in  CMakeLists.txt  LICENSE  README.md  astardotc.dfa  astardotc.in  copy-machines.cmake  dfa-sim  dfa.cpp  dfa.hpp  getopt.h  m1.dfa  m1.in  main.cpp
.github/workflows/: cmake.yml
